<?xml version="1.0" encoding="UTF-8"?>
<resources>
    <string name="cannot_continue">Cannot continue due to an error.</string>
    <string name="expand_view">Expand view</string>
    <string name="collapse_view">Collapse view</string>
    <string name="technical_detail">Technical Details</string>
    <string name="no_info">(No information)</string>
    <string name="quit">Quit</string>
    <string name="show_crash_dialog">Show Crash Dialog</string>
</resources>
