<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	 android:padding="5dip"
	 android:layout_width="match_parent"
	 android:layout_height="wrap_content">

	 <LinearLayout
	     android:layout_width="match_parent"
	     android:layout_height="wrap_content"
	     android:orientation="vertical" >

	     <TextView
	         android:id="@+id/textView1"
	         android:padding="5dip"
	         android:layout_width="match_parent"
	         android:layout_height="wrap_content"
	         android:text="@string/cannot_continue"
	         android:textAppearance="?android:attr/textAppearanceMedium" />

	     <TextView
	         android:id="@+id/tvMessage"
	         android:padding="5dip"
	         android:layout_width="match_parent"
	         android:layout_height="wrap_content"
           android:autoLink="web"
           android:visibility="gone"
	         android:textAppearance="?android:attr/textAppearanceMedium" />

	     <LinearLayout
	         android:layout_width="match_parent"
	         android:layout_height="wrap_content"
	         android:orientation="horizontal"
	         android:gravity="center_vertical"
	         android:padding="0dip"
	         android:layout_marginTop="5dip"
	         android:layout_marginBottom="10dip"
	         style="@style/headerLine"
	         >

	         <TextView
	             android:id="@+id/textView2"
	             android:layout_width="0dip"
	             android:layout_height="wrap_content"
	             android:text="@string/technical_detail"
	             android:layout_weight="1"
	             android:layout_marginLeft="5dip"
	             android:textAppearance="?android:attr/textAppearanceSmall" />

	         <ImageButton
	             android:id="@+id/btnExpand"
	             android:layout_width="32dip"
	             android:layout_height="32dip"
	             android:layout_gravity="right"
	             android:contentDescription="@string/expand_view"
	             android:src="@drawable/navigation_expand" />

	         <ImageButton
	             android:id="@+id/btnCollapse"
	             android:layout_width="32dip"
	             android:layout_height="32dip"
	             android:layout_gravity="right"
	             android:visibility="gone"
	             android:contentDescription="@string/collapse_view"
	             android:src="@drawable/navigation_collapse" />
	     </LinearLayout>

         <HorizontalScrollView
             android:id="@+id/horizontalScrollView1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" >
	
		     <TextView
		         android:id="@+id/tvStackTrace"
		         android:layout_width="wrap_content"
		         android:layout_height="wrap_content"
		         android:paddingLeft="5dip"
		         android:visibility="gone"
		         android:text="@string/no_info"
		         android:textAppearance="?android:attr/textAppearanceSmall" />

         </HorizontalScrollView>

	 </LinearLayout>
</ScrollView>
